Fix the homepage layout on Safari by taking advantage of flexbox more

--- a/imgcap/public/assets/styles/index.css
+++ b/imgcap/public/assets/styles/index.css
@@ -4,7 +4,7 @@
 }
 
 .page-index form {
-  align-items: stretch;
+  align-items: baseline;
   display: flex;
   margin: 0 auto;
   max-width: 400px;
@@ -14,6 +14,10 @@
 
 .page-index input[type=text] {
   flex: 1;
+}
+
+.page-index button {
+  align-self: stretch;
 }
 
 @media (min-width: 650px) {
