--- a/imgcap/public/assets/styles/main.css
+++ b/imgcap/public/assets/styles/main.css
@@ -19,10 +19,6 @@ body {
   margin-left: -0.45em;
 }
 
-label {
-  line-height: calc(100% + 20px);
-}
-
 input[type=text], button {
   background-color: #FAFAFA;
   border: 2px solid #2A2A2A;
@@ -42,6 +38,7 @@ input[type=text] {
 
 button {
   cursor: pointer;
+  margin: 0;
   padding: 0 0.75em;
 }
 
